--- a/style.css
+++ b/style.css
@@ -101,6 +101,15 @@ nav a {
   border-radius: 5px; /* Add border radius for rounded corners */
 }
 
+.indexNav a.active {
+    background: var(--blue-color);
+    color: var(--white-color);
+    border: 2px solid var(--blue-color);
+    padding: 5px 10px;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+}
+
 /* Hover Effect for the Navbar Button */
 nav a:hover {
   color: var(--white-color); /* Change text color to white */
@@ -429,7 +438,7 @@ h6 {
 /* Scrollbar styling for Webkit browsers (Chrome, Safari) */
 ::-webkit-scrollbar {
     width: 20px;
-    
+
 }
 
 ::-webkit-scrollbar-track {
